# pattern-trie

./: .gitignore  .gitlab-ci.yml  README.md  cabal.project  pattern-trie.cabal
bench/: Main.hs
docs-extra/: backtrack.tex
src/Data/Trie/: Pattern.hs
test/: Main.hs
test/Test/Data/Trie/: Pattern.hs
