name:                pattern-trie
version:             0.1.0
synopsis:            Pattern tries
description:
    A trie with (simple) patterns as keys that can capture
    values during lookups.

license:             MPL-2.0
license-file:        LICENSE
author:              Roman S. Borschel
maintainer:          Roman S. Borschel <roman@pkaboo.org>
copyright:           2018 Roman S. Borschel
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
    default-language: Haskell2010
    hs-source-dirs:   src
    exposed-modules:
        Data.Trie.Pattern

    default-extensions:
        NoImplicitPrelude

    build-depends:
        base                 >= 4.9 && < 5
      , deepseq              >= 1.4.3
      , containers           >= 0.5.7
      , unordered-containers >= 0.2
      , bytestring           >= 0.10

    ghc-options:
        -Wall
        -fwarn-tabs

test-suite tests
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          Main.hs
    ghc-options:
        -Wall
        -fwarn-tabs
        -threaded
    other-modules: Test.Data.Trie.Pattern
    build-depends:
        base                 == 4.*
      , bytestring
      , containers           >= 0.5.7
      , mtl                  >= 2.1
      , pattern-trie
      , QuickCheck           >= 2.10
      , tasty                >= 0.11
      , tasty-quickcheck     >= 0.9
      , unordered-containers >= 0.2

test-suite doctests
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: doctests.hs
    build-depends:
        base
      , doctest >= 0.16

benchmark bench
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs: bench
    main-is: Main.hs
    build-depends:
        base
      , bytestring
      , criterion
      , containers
      , deepseq
      , pattern-trie

    if impl(ghc < 8.4)
        build-depends: bytestring-trie

